# rfhe-rs

./: Cargo.toml  Makefile  README.md  codecov.yml
apps/trivium/: Cargo.toml  README.md
apps/trivium/benches/: kreyvium_bool.rs  kreyvium_byte.rs  kreyvium_shortint.rs  trivium_bool.rs  trivium_byte.rs  trivium_shortint.rs
apps/trivium/src/kreyvium/: kreyvium.rs  kreyvium_byte.rs  kreyvium_shortint.rs  test.rs
apps/trivium/src/static_deque/: static_byte_deque.rs
apps/trivium/src/trans_ciphering/: mod.rs
apps/trivium/src/trivium/: test.rs  trivium_bool.rs  trivium_byte.rs  trivium_shortint.rs
backends/rfhe-cuda-backend/: Cargo.toml  README.md  build.rs
backends/rfhe-cuda-backend/cuda/: CMakeLists.txt
backends/rfhe-cuda-backend/cuda/src/: CMakeLists.txt
backends/rfhe-cuda-backend/cuda/src/integer/: addition.cuh  div_rem.cuh  integer.cuh
backends/rfhe-cuda-backend/cuda/tests_and_benchmarks/: CMakeLists.txt
backends/rfhe-cuda-backend/cuda/tests_and_benchmarks/benchmarks/: CMakeLists.txt
backends/rfhe-cuda-backend/cuda/tests_and_benchmarks/include/: utils.h
backends/rfhe-cuda-backend/cuda/tests_and_benchmarks/tests/: CMakeLists.txt  README.md  test_classical_pbs.cpp
backends/rfhe-cuda-backend/src/: cuda_bind.rs
ci/: benchmark_parser.py  lattice_estimator.sage
concrete-csprng/: Cargo.toml  LICENSE  README.md
docker/: Dockerfile.wasm_tests
rfhe/: CMakeLists.txt  Cargo.toml  cbindgen.toml
rfhe-zk-pok/: Cargo.toml
rfhe/benches/: utilities.rs
rfhe/benches/boolean/: bench.rs
rfhe/benches/core_crypto/: dev_bench.rs  ks_bench.rs  pbs128_bench.rs  pbs_bench.rs
rfhe/benches/high_level_api/: bench.rs
rfhe/benches/integer/: bench.rs  glwe_packing_compression.rs  oprf.rs  signed_bench.rs  zk_pke.rs
rfhe/benches/keygen/: bench.rs
rfhe/benches/shortint/: bench.rs  casting.rs  glwe_packing_compression.rs  oprf.rs
rfhe/c_api_tests/: CMakeLists.txt  test_boolean_keygen.c  test_boolean_server_key.c  test_c_doc.c  test_compressed_list.c  test_high_level_128_bits.c  test_high_level_2048.c  test_high_level_256_bits.c  test_high_level_array.c  test_high_level_boolean.c  test_high_level_compact_list.c  test_high_level_custom_integers.c  test_high_level_integers.c  test_high_level_integers_cuda.c  test_high_level_threading.c  test_high_level_zk.c  test_micro_bench_and.c  test_shortint_keygen.c  test_shortint_pbs.c  test_shortint_server_key.c
rfhe/examples/: dist_tuniform.rs  pbs_count.rs  sha256.rs
rfhe/examples/dark_market/: fhe.rs  improved_parallel_fhe.rs  main.rs  parallel_fhe.rs
rfhe/examples/fhe_strings/: README.md  ciphertext.rs  client_key.rs
rfhe/examples/fhe_strings/server_key/: comp.rs  mod.rs  no_patterns.rs  trim.rs
rfhe/examples/regex_engine/: ciphertext.rs  engine.rs  execution.rs
rfhe/examples/sha256_bool/: boolean_ops.rs  main.rs  sha256_function.rs
rfhe/examples/utilities/: boolean_key_sizes.rs  generates_test_keys.rs  hlapi_compact_pk_ct_sizes.rs  micro_bench_and.rs  params_to_file.rs  shortint_key_sizes.rs  wasm_benchmarks_parser.rs
rfhe/js_on_wasm_tests/: test-hlapi-signed.js  test-hlapi-unsigned.js
rfhe/src/: lib.rs  safe_deserialization.rs  zk.rs
rfhe/src/boolean/: keycache.rs  mod.rs  prelude.rs
rfhe/src/boolean/backward_compatibility/: ciphertext.rs  client_key.rs  key_switching_key.rs  parameters.rs  public_key.rs  server_key.rs
rfhe/src/boolean/ciphertext/: mod.rs
rfhe/src/boolean/client_key/: mod.rs
rfhe/src/boolean/engine/: bootstrapping.rs  mod.rs
rfhe/src/boolean/key_switching_key/: mod.rs
rfhe/src/boolean/parameters/: mod.rs
rfhe/src/boolean/public_key/: compressed.rs  standard.rs
rfhe/src/boolean/server_key/: tests.rs
rfhe/src/c_api/: utils.rs
rfhe/src/c_api/boolean/: parameters.rs
rfhe/src/c_api/high_level_api/: compact_list.rs  integers.rs  mod.rs  threading.rs
rfhe/src/core_crypto/: prelude.rs  seeders.rs
rfhe/src/core_crypto/algorithms/: ggsw_encryption.rs  glwe_encryption.rs  glwe_linear_algebra.rs  glwe_sample_extraction.rs  glwe_secret_key_generation.rs  lwe_bootstrap_key_generation.rs  lwe_encryption.rs  lwe_keyswitch.rs  lwe_keyswitch_key_generation.rs  lwe_linear_algebra.rs  lwe_multi_bit_bootstrap_key_generation.rs  lwe_multi_bit_programmable_bootstrapping.rs  lwe_packing_keyswitch.rs  lwe_packing_keyswitch_key_generation.rs  lwe_private_functional_packing_keyswitch.rs  lwe_secret_key_generation.rs  lwe_wopbs.rs  lwe_zero_knowledge_verification.rs  polynomial_algorithms.rs  slice_algorithms.rs
rfhe/src/core_crypto/commons/: ciphertext_modulus.rs  dispersion.rs  parameters.rs
rfhe/src/core_crypto/entities/: cleartext.rs  compressed_modulus_switched_glwe_ciphertext.rs  compressed_modulus_switched_lwe_ciphertext.rs  compressed_modulus_switched_multi_bit_lwe_ciphertext.rs  ggsw_ciphertext.rs  ggsw_ciphertext_list.rs  plaintext.rs  (+35 more)
rfhe/src/high_level_api/: compact_list.rs  compressed_ciphertext_list.rs  config.rs  global_state.rs  mod.rs  prelude.rs
rfhe/src/integer/: keycache.rs  mod.rs  oprf.rs
rfhe/src/js_on_wasm_api/: boolean.rs
rfhe/src/shortint/: mod.rs  prelude.rs
rfhe/web_wasm_parallel_tests/: index.html  package-lock.json  package.json  worker.js
scripts/: c_api_tests.sh  check_cargo_min_ver.sh  integer-tests.sh  no_rfhe_typo.sh  shortint-tests.sh  symlink_c_libs_without_fingerprint.sh  test_filtering.py
tasks/: Cargo.toml
tasks/src/: check_rfhe_docs_are_tested.rs  main.rs
utils/cargo-rfhe-lints/: Cargo.toml  README.md
utils/cargo-rfhe-lints-inner/: Cargo.toml  README.md
utils/cargo-rfhe-lints-inner/src/: main.rs  serialize_without_versionize.rs  utils.rs
utils/cargo-rfhe-lints/src/: main.rs
utils/rfhe-versionable/: Cargo.toml  README.md
utils/rfhe-versionable-derive/: Cargo.toml
utils/rfhe-versionable-derive/src/: lib.rs
utils/rfhe-versionable/examples/: bounds.rs  convert.rs  failed_upgrade.rs  manual_impl.rs  not_versioned.rs  recursive.rs  simple.rs  upgrades.rs  vec.rs
utils/rfhe-versionable/src/: lib.rs
utils/rfhe-versionable/tests/: formats.rs  types.rs
utils/rfhe-versionable/tests/testcases/: enum.rs  struct.rs  unit.rs
(+261 files in other folders)
