[package]
name = "concrete-csprng"
version = "0.4.1"
edition = "2021"
license = "BSD-3-Clause-Clear"
description = "Cryptographically Secure PRNG used in the RFHE-rs library."
homepage = "https://initverse.org/"
documentation = "https://docs.initverse.org/rfhe-rs"
repository = "https://github.com/Project-InitVerse/rfhe-rs"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]
rust-version = "1.72"

[dependencies]
aes = "0.8.2"
rayon = { version = "1.5.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.133"

[dev-dependencies]
rand = "0.8.3"
criterion = "0.5.1"
clap = "=4.4.4"

[features]
parallel = ["rayon"]
seeder_x86_64_rdseed = []
seeder_unix = []
generator_x86_64_aesni = []
generator_fallback = []
generator_aarch64_aes = []

x86_64 = [
    "parallel",
    "seeder_x86_64_rdseed",
    "generator_x86_64_aesni",
    "generator_fallback",
]
x86_64-unix = ["x86_64", "seeder_unix"]
aarch64 = ["parallel", "generator_aarch64_aes", "generator_fallback"]
aarch64-unix = ["aarch64", "seeder_unix"]

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false
required-features = ["seeder_x86_64_rdseed", "generator_x86_64_aesni"]

[[example]]
name = "generate"
path = "examples/generate.rs"
required-features = ["seeder_unix", "generator_fallback"]
