[package]
name = "rfhe-versionable"
version = "0.2.1"
edition = "2021"
keywords = ["versioning", "serialization", "encoding"]
homepage = "https://initverse.org/"
documentation = "https://docs.rs/rfhe_versionable"
repository = "https://github.com/Project-InitVerse/rfhe-rs"
license = "BSD-3-Clause-Clear"
description = "rfhe-versionable: Add versioning informations/backward compatibility on rust types used for serialization"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
static_assertions = "1.1"
trybuild = { version = "1", features = ["diff"] }

# used to test various serialization formats
bincode = "1.3"
serde_json = "1.0"
ciborium = "0.2"
rmp-serde = "1.3"
serde_yaml = "0.9"
toml = "0.8"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rfhe-versionable-derive = { version = "0.2.1", path = "../rfhe-versionable-derive" }
num-complex = { version = "0.4", features = ["serde"] }
aligned-vec = { version = "0.5", features = ["serde"] }
